syntax = "proto3";

package example;

service RemoteCompute {
  rpc askResult (ComputeRequest) returns (ComputeReply) {}
}

message ComputeRequest {
  int32 first = 1;
  int32 second = 2;
}

message ComputeReply {
  int32 result = 1;
}